广告位更改

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsList.cshtml
@@ -27,9 +27,10 @@
                                 //无图
                                 <a href="@ad.TransferUrl">
                                     <h3 class="GG_B1Tit">@ad.Title</h3>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -39,9 +40,10 @@
                                 <a href="@ad.TransferUrl">
                                     <div class="GG_B2Left f-l">
                                         <h3 class="GG_B1Tit">@ad.Title</h3>
-                                        <div class="GG_BbtFont">
-                                            <b>广告</b>
+                                        <div class="newstime">
                                             <span>@ad.Company</span>
+                                            <span>@ad.TimeStr</span>
+                                            <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                         </div>
                                     </div>
                                     <div class="GG_B2Right">
@@ -65,9 +67,10 @@
                                         }
 
                                     </div>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -84,9 +87,10 @@
                                         <div style="clear:both;"></div>
                                     </ul>
 
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -114,9 +118,10 @@
                                 //无图
                                 <a href="@ad.TransferUrl">
                                     <h3 class="GG_B1Tit">@ad.Title</h3>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -126,9 +131,10 @@
                                 <a href="@ad.TransferUrl">
                                     <div class="GG_B2Left f-l">
                                         <h3 class="GG_B1Tit">@ad.Title</h3>
-                                        <div class="GG_BbtFont">
-                                            <b>广告</b>
+                                        <div class="newstime">
                                             <span>@ad.Company</span>
+                                            <span>@ad.TimeStr</span>
+                                            <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                         </div>
                                     </div>
                                     <div class="GG_B2Right">
@@ -152,9 +158,10 @@
                                         }
 
                                     </div>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -170,10 +177,10 @@
 
                                         <div style="clear:both;"></div>
                                     </ul>
-
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -201,9 +208,10 @@
                                 //无图
                                 <a href="@ad.TransferUrl">
                                     <h3 class="GG_B1Tit">@ad.Title</h3>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -213,9 +221,10 @@
                                 <a href="@ad.TransferUrl">
                                     <div class="GG_B2Left f-l">
                                         <h3 class="GG_B1Tit">@ad.Title</h3>
-                                        <div class="GG_BbtFont">
-                                            <b>广告</b>
+                                        <div class="newstime">
                                             <span>@ad.Company</span>
+                                            <span>@ad.TimeStr</span>
+                                            <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                         </div>
                                     </div>
                                     <div class="GG_B2Right">
@@ -239,9 +248,10 @@
                                         }
 
                                     </div>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -258,9 +268,10 @@
                                         <div style="clear:both;"></div>
                                     </ul>
 
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -287,9 +298,10 @@
                                 //无图
                                 <a href="@ad.TransferUrl">
                                     <h3 class="GG_B1Tit">@ad.Title</h3>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -299,9 +311,10 @@
                                 <a href="@ad.TransferUrl">
                                     <div class="GG_B2Left f-l">
                                         <h3 class="GG_B1Tit">@ad.Title</h3>
-                                        <div class="GG_BbtFont">
-                                            <b>广告</b>
+                                        <div class="newstime">
                                             <span>@ad.Company</span>
+                                            <span>@ad.TimeStr</span>
+                                            <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                         </div>
                                     </div>
                                     <div class="GG_B2Right">
@@ -325,9 +338,10 @@
                                         }
 
                                     </div>
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
@@ -344,9 +358,10 @@
                                         <div style="clear:both;"></div>
                                     </ul>
 
-                                    <div class="GG_BbtFont">
-                                        <b>广告</b>
+                                    <div class="newstime">
                                         <span>@ad.Company</span>
+                                        <span>@ad.TimeStr</span>
+                                        <span>@ad.CommentsNumber<i class="icon-comment"></i></span>
                                     </div>
                                 </a>
                             }
