--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -731,7 +731,7 @@
                     img='<img src="'+item.ThumbList[0]+'"  class="GG_B5Tu">'
                 }
                 html='  <div class="GG_Box GG_Box1 GG_Box2">'
-               + ' <a href="javascript:;">'+img+'</a>'
+               + ' <a href="'+item.TransferUrl+'">'+img+'</a>'
                + '   </div>'
             }
 
