--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -173,7 +173,7 @@
                     img='<img src="'+item.ThumbList[0]+'"  class="GG_B5Tu">'
                 }
                 html='  <div class="GG_Box">'
-               + ' <a href="javascript:;">'+img+'</a>'
+               + ' <a href="' + item.TransferUrl + '">'+img+'</a>'
                + '   </div>'
             }
 
