--- a/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/css/style.css
@@ -163,7 +163,10 @@ a {
 .QHT_Set{padding: 0 21px 0 11px;height: 24px;border: 1px solid #fff;border-radius: 2px; font-size:12px; background:url(../images/67_5.png) no-repeat 57px center; background-size:10px; color:#fff;appearance:none;  -moz-appearance:none;  -webkit-appearance:none;}
 .QHT_Set option{ background:#f13131; font-size:12px; color:#fff;}
 
-
+/*首页彩种切换*/
+.hjc_CZQieBox{ width:100%; background:#fff;}
+.hjc_CZQieBoxDing{ position:fixed; top:50px; left:0; z-index:9999;}
+.M-T{ margin-top:36px;}
 
 
 
@@ -278,16 +281,17 @@ a {
     }
 
 .hjc_hdNav {
-    position: fixed;
-    top: 50px;
-    left: 0;
     width: 100%;
+position: fixed;
+top: 50px;
+left: 0;
     background: #fff;
     z-index: 9999;
     border-bottom: 1px solid #e8e8e8;
 }
 
 .hdNav_ul {
+    padding:5px 0;
 }
 
     .hdNav_ul li {
@@ -303,7 +307,7 @@ a {
         .hdNav_ul li a {
             display: block;
             width: 100%;
-            padding: 12px 0;
+            padding: 2px 0;
         }
 
         .hdNav_ul li i {
@@ -358,7 +362,7 @@ a {
         }
 
 .hjc_indexmain {
-    margin-top: 254px;
+   
 }
 
 .ind_mainUl {
@@ -6939,12 +6943,12 @@ a {
         }
 
         .hdNav_ul li i {
-            width: 2.34375rem;
-            height: 2.34375rem;
+            width:30px;
+            height:30px;
         }
 
 .hjc_indexmain {
-    margin-top: 16.375rem;
+   
 }
 
 .hdNav_cai_expand .hdNav_cai_title {
@@ -8771,6 +8775,22 @@ footer {
 .zfC_XZ .current .XZ_Dl dd .XZ_Qtu .Qtu_B{ display:block;}
 .zfC_Que{ height:40px; margin:10px; border-radius:5px; background:#e21717;}
 .zfC_Que a{ display:block; text-align:center; color:#fff; font-size:14px; height:40px; line-height:40px;}
+
+
+
+/*赛车样式*/
+.SaiChe_Text{display:inline-block;width:22px;height:22px;line-height:22px;text-align:center;font-size:12px;color:#fff;margin:2px 5px 2px 0;border-radius:2px;text-shadow:#555 1px 0 0, #555 0 1px 0, #555 -1px 0 0, #555 0 -1px 0;-webkit-text-shadow:#555 1px 0 0, #555 0 1px 0, #555 -1px 0 0, #555 0 -1px 0;-moz-text-shadow:#555 1px 0 0, #555 0 1px 0, #555 -1px 0 0, #555 0 -1px 0;font-weight:bolder;font-style:italic;}
+.SaiChe_TA1{background:#FFCC00 !important;}
+.SaiChe_TA2{background:#0089ff !important;}
+.SaiChe_TA3{background:#4d4d4d !important;}
+.SaiChe_TA4{background:#ff7300 !important;}
+.SaiChe_TA5{background:#3399CC !important;}
+.SaiChe_TA6{background:#5200ff !important;}
+.SaiChe_TA7{background:#bbb !important;}
+.SaiChe_TA8{background:#ff0000 !important;}
+.SaiChe_TA9{background:#760000 !important;}
+.SaiChe_TA10{background:#28c200 !important;}
+
 
 
 
