--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Index.cshtml
@@ -20,7 +20,7 @@
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">排行榜</a>
-        <a href="javascript::" class="ZX_Sidebar"></a>
+        <a href="javascript:;" class="ZX_Sidebar"></a>
     </header>
 
     <div class="hjc_indexmain" style="margin-top:50px;">
