--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/Index.cshtml
@@ -66,7 +66,7 @@
         <header class="hjc_header">
             <a href="javascript:history.go(-1);" class="hjc_back"></a>
             <a href="javascript:;" class="hjc_logo hjc_HeaderXL">@Model.TypeName<span class="select_sign"></span></a>
-            <a href="javascript::" class="ZX_Sidebar"></a>
+            <a href="javascript:;" class="ZX_Sidebar"></a>
         </header>
         <div class="hjc_hdNav fixed" style="display: none">
             <div class="hdNav_cai_expand">
