--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/NewsDetail.cshtml
@@ -189,7 +189,7 @@
         <a href="javascript:history.go(-1);" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">@(lottery.TypeName + "." + @newsType.TypeName)</a>
         @*<a href="javascript:showShare();" class="SX_A">分享</a>*@
-        <a href="javascript::" class="ZX_Sidebar"></a>
+        <a href="javascript:;" class="ZX_Sidebar"></a>
     </header>
     <section class="article">
         <div class="article-title">@Model.FullHead</div>
