--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/Index.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/Talking/Index.cshtml
@@ -19,7 +19,7 @@
     <header class="hjc_header">
         <a href="/home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">聊天室列表</a>
-        <a href="javascript::" class="ZX_Sidebar"></a>
+        <a href="javascript:;" class="ZX_Sidebar"></a>
     </header>
     <div class="hjc_chatroom">
         <ul class="chatroom_ul">
