--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/List/Expert.cshtml
@@ -27,7 +27,7 @@
     <header class="hjc_header">
         <a href="/Home/Index" class="hjc_back"></a>
         <a href="javascript:;" class="hjc_logo">彩票高手榜</a>
-        <a href="javascript::" class="ZX_Sidebar"></a>
+        <a href="javascript:;" class="ZX_Sidebar"></a>
     </header>
 
     <div class="hjc_hdNav">
