--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
@@ -55,7 +55,7 @@
                             </dd>
                         </dl>
                         <div class="comp_Dlk4">
-                            <a href="javascript::" class="comp_DZ">
+                            <a href="javascript:;" class="comp_DZ">
                                 @if (Model.CurrentUserLikes > 0)
                                 {
                                     <i class="on" data-id="@Model.Id" data-ctype="2" data-commenttype="@Model.Type"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
