--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/WonderfulComment.cshtml
@@ -40,7 +40,7 @@
                             </dd>
                         </dl>
                         <div class="comp_Dlk4">
-                            <a href="javascript::" class="comp_DZ">
+                            <a href="javascript:;" class="comp_DZ">
                                 @if (comment.CurrentUserLikes > 0)
                                 {
                                     <i class="on" data-id="@comment.Id" data-ctype="2" data-commenttype="@comment.Type"><img src="/images/46_1.png" class="DZ_tu1"><img src="/images/46_2.png" class="DZ_tu2"></i>
