修复计划评论查看回复的问题

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentList.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentList.cshtml
@@ -218,7 +218,7 @@
                     + '</a>'
                     + '<a href="/Comment/Index/' + value.Id + '?ctype=2&type=' + ctype + '" class="comp_HF"><img src="/images/46_3.png"></a>'
                     + '</div>'
-                    + (value.ReplayCount > 0 ? '<div class="comp_replay"><a href="/News/CommentDetail/' + value.Id + '">查看全部<span>' + value.ReplayCount + '</span>条回复>></a></div>' : '')
+                    + (value.ReplayCount > 0 ? '<div class="comp_replay"><a href="/News/CommentDetail/' + value.Id + '?type='+value.Type+'">查看全部<span>' + value.ReplayCount + '</span>条回复>></a></div>' : '')
                     + '</li>';
                 li = $.stringParseEmoji(li);
                 html.push(li);
