修复计划回复列表查询的问题

--- a/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
+++ b/C8.Lottery.Portal/C8.Lottery.Portal/Views/News/CommentDetail.cshtml
@@ -110,6 +110,7 @@
                         url: '/News/LastReply',
                         data: {
                             id: id,
+                            type:ctype,
                             pageIndex: pageIndex,
                             pageSize: pageSize
                         },
